# chupatext

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  INSTALL.ja  Makefile.am  NEWS  NEWS.ja  README  README.ja  autogen.sh  chupatext-excel.pc.in  chupatext-gzip.pc.in  chupatext-pdf.pc.in  chupatext-powerpoint.pc.in  chupatext-ruby.pc.in  chupatext-tar.pc.in  chupatext-text.pc.in  chupatext-word.pc.in  chupatext-zip.pc.in  chupatext.h  chupatext.pc.in  configure.ac  prereq.mk  version.txt
apt/: Makefile.am  build-deb.sh  build-in-chroot.sh  chupatext-depended-packages
binding/ruby/: Makefile.am  chupa_ruby.c  chupa_ruby.h  init.c  metadata.c
binding/ruby/lib/chupa/: html.rb
chupatext/: Makefile.am  archive_decomposer.c  archive_decomposer.h  chupa.c  chupa_archive_decomposer.c  chupa_archive_decomposer.h  chupa_data.c  chupa_data.h  chupa_data_input.c  chupa_data_input.h  chupa_decomposer.c  chupa_decomposer.h  chupa_decomposer_description.c  chupa_decomposer_description.h  chupa_decomposer_factory.c  chupa_decomposer_factory.h  chupa_decomposer_module.h  chupa_dispatcher.c  chupa_dispatcher.h  chupa_factory_builder.c  chupa_factory_builder.h  chupa_feeder.c  chupa_feeder.h  chupa_gsf_input_stream.c  chupa_gsf_input_stream.h  chupa_index.c  chupa_init.c  chupa_init.h  chupa_logger.c  chupa_logger.h  chupa_marshalers.list  chupa_memory_input_converter.c  chupa_memory_input_converter.h  chupa_memory_input_stream.c  chupa_memory_input_stream.h  chupa_metadata.c  chupa_metadata.h  chupa_module.c  chupa_module.h  chupa_module_description.c  (+30 more)
data/: Makefile.am
data/descriptions/: Makefile.am  excel.desc  gzip.desc  pdf.desc  powerpoint.desc  ruby.desc  tar.desc  text.desc  word.desc  zip.desc
data/powerpoint/basic/Standard/: Export.xba  script.xlb
debian/: README.Debian  changelog  chupatext-bin.install  chupatext-decomposer-excel.install  chupatext-decomposer-gzip.install  chupatext-decomposer-pdf.install  chupatext-decomposer-ruby.install  chupatext-decomposer-tar.install  chupatext-decomposer-text.install  chupatext-decomposer-word.install  chupatext-decomposer-zip.install  chupatext-doc.docs  chupatext-doc.install  control  copyright  docs  libchupatext-dev.install  libchupatext0.install  rules
doc/: Makefile.am  chupa.rd.ja  chupatext.rd  chupatext.rd.ja  install-to-debian.rd  install-to-debian.rd.ja  install-to-others.rd  install-to-others.rd.ja  install-to-ubuntu.rd  install-to-ubuntu.rd.ja
doc/reference/: Makefile.am  chupatext-docs.sgml  footer-ja.html  footer.html  head-ja.html  head.html  header-ja.html  header.html  ja.po
include/: chupatext.h
include/chupatext/: chupa_metadata.h  module-impl.h  module.h
lib/: Makefile.am  chupa_debug.h  chupa_init.c  chupa_metadata.c  chupa_private.h  chupa_text.c  chupa_text_input_stream.h  module.c  textinputstream.h
license/: Makefile.am
module/: Makefile.am  chupa_msexcel.c  chupa_mspowerpoint.c  chupa_msword.c  chupa_pdf.c  chupa_ruby.c  chupa_ruby.h  chupa_tar.c  chupa_zip.c  excel.c  excel_factory.c  gzip.c  html.c  html_factory.c  pdf.c  pdf_factory.c  powerpoint.c  powerpoint_factory.c  prereq.mk  ruby.c  ruby_factory.c  tar.c  tar_factory.c  text.c  text_factory.c  word.c  word_factory.c  zip.c  zip_factory.c
module/excel/: Makefile.am  gnm-plugin.h
module/ruby/: Makefile.am  chupa_ruby.h  data.c  feeder.c  gsf_output.c  init.c  metadata.c  text_input.c
module/ruby/lib/: Makefile.am
module/ruby/lib/chupa/: Makefile.am  base_decomposer.rb  data.rb  external_command.rb  loader.rb  post_init.rb
module/ruby/lib/chupa/decomposer/: Makefile.am  html.rb  powerpoint.rb
modules/: .gitignore  Makefile.am  excel.c  gzip.c  pdf.c  ruby.c  tar.c  text.c  word.c  zip.c
modules/excel/: Makefile.am
modules/ruby/: Makefile.am  chupa_ruby.h  data.c  decomposer.c  error.c  feeder.c  g_memory_input_stream.c  init.c  logger.c  metadata.c  types.c  utils.c
modules/ruby/lib/: Makefile.am
modules/ruby/lib/chupa/: base_decomposer.rb  data.rb  external_command.rb  loader.rb  post_init.rb  pre_init.rb
modules/ruby/lib/chupa/decomposers/: html.rb  powerpoint.rb
modules/ruby/lib/chupatext/: Makefile.am  base_decomposer.rb  data.rb  external_command.rb  loader.rb  post_init.rb
po/: POTFILES.in
test/: Makefile.am  chupa_test_util.c  chupa_test_util.h  run-test.rb  run-test.sh  suite_chupatext_test.c  test_bin_chupatext.c  test_data.c  test_data_input.c  test_decomposer.c  test_excel.c  test_external_decomposer.c  test_gsf_input_stream.c  test_gz.c  test_html.c  test_mail.c  test_metadata.c  test_msexcel.c  test_mspowerpoint.c  test_msword.c  test_open_document_presentation.c  test_open_document_spreadsheet.c  test_open_document_text.c  test_pdf.c  test_powerpoint.c  test_restrict_input_stream.c  test_ruby.c  test_tar.c  test_text.c  test_text_input.c  test_text_input_stream.c  test_utils.c  test_word.c  test_zip.c
test/fixtures/: Makefile.am  gnu_philosophy.ru.html  ja95.doc  ja97.doc  sample.doc  sample.eml  sample.html  sample.ppt  sample.rb  sample.tar  sample.xls  sample_2007.xlsx  sample_euc_jp.html  sample_ja.doc  sample_ja.ppt  sample_utf8.html
test/fixtures/excel/: 2007.xlsx  2007_ja.xlsx  95.xls  95_ja.xls  Makefile.am  xp.xls  xp_ja.xls
test/fixtures/html/: Makefile.am  euc_jp.html  euc_jp_without_content_type.html  index.html  sample_euc_jp.html  utf8.html  utf8_without_content_type.html  windows_31j.html  windows_31j_without_content_type.html  x_sjis.html  x_sjis_without_content_type.html
test/fixtures/open_document_presentation/: 1.2.fodp  1.2.odp  1.2_ja.fodp  1.2_ja.odp  Makefile.am
test/fixtures/open_document_spreadsheet/: 1.2.fods  1.2.ods  1.2_ja.fods  1.2_ja.ods  Makefile.am
test/fixtures/open_document_text/: 1.2.fodt  1.2.odt  1.2_ja.fodt  1.2_ja.odt  Makefile.am
test/fixtures/powerpoint/: 2007.pptx  2007_ja.pptx  Makefile.am  xp.ppt  xp_ja.ppt
test/fixtures/word/: 2007.docx  2007_ja.docx  95.doc  95_ja.doc  Makefile.am  xp.doc  xp_ja.doc
test/ruby/: Makefile.am  chupa_test_utils.rb  test_data.rb  test_metadata.rb
tool/: Makefile.am  version-update.sh
(+6 files in other folders)
